[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "armory_tools_lib"
version = "1.1"
authors = [
  { name="Rl242Dev", email="robin.lachand@gmail.com" },
]
description = "A Armory API Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]